fix:sv-mode-padding

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -186,6 +186,7 @@
       word-break: break-word;
       background-size: 20px 20px;
       white-space: pre-wrap;
+      font-family: sfmono-regular, Consolas, liberation mono, Menlo, Courier, monospace;
     }
 
     pre {
